--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,69 +1,5 @@
-body {
-    font-family: "Montserrat", sans-serif;
-    max-width: 100%;
-    padding-bottom: 5%;
-}
-
-body.index {
-    background-color: #0a2459;
-    color: #d9d3cc;
-}
-
-.qlf-tile {
-    border-radius: 10px;
-    background: #ffffff;
-    box-shadow: 5px 5px 3px rgba(0, 0, 0, 0.3);
-    border: solid #aaaaaa 1px;
-    width: 40%;
-}
-
-.qlf-central-tile {
-    padding: 5%;
-}
-
-.qlf-alert {
-    color: #bf3f34;
-}
-
-.qlf-label {
-    font-family: "Bebas Neue", sans-serif;
-    color: #0A2459;
-    display: block;
-    margin-top: 3%;
-}
-
-.qlf-rounded-btn {
-    background-color: #a61212;
-    font-family: "Bebas Neue", sans-serif;
-    color: #d9d3cc;
-    font-size: 1em;
-    width: 60%;
-    margin: 5% auto 0 auto;
-    display: block;
-}
-
-a.qlf-link-signup {
-    text-align: center;
-    display: block;
-    margin: 5% 0;
-    text-decoration: none;
-    color: #1592e6;
-    font-size: 0.8em;
-}
-
-a.qlf-link-signup:hover {
-    text-decoration: underline;
-}
-
-a.qlf-link-password-forgotten {
-    text-align: center;
-    display: block;
-    margin: 5% 0;
-    text-decoration: none;
-    color: #1592e6;
-    font-size: 0.8em;
-}
-
-a.qlf-link-password-forgotten:hover {
-    text-decoration: underline;
+.qlf-captcha {
+    display: flex;
+    justify-content: center;
+    margin: 5% 0 0 0;
 }
