--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -55,8 +55,9 @@
                 <label for="confirmPassword">Confirmation de mot de passe</label>
                 <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Confirmez votre mot de passe" required>
             </div>
-            <div data-sitekey="faee6d9a-baec-4cc7-baa2-a3e27d9b196d"
-                     data-callback="submitForm"></div>
+            <div class="qlf-captcha">
+                <div class="h-captcha" data-sitekey="faee6d9a-baec-4cc7-baa2-a3e27d9b196d" data-callback="submitForm"></div>
+            </div>
             <a href="/login">Déjà inscrit ? Connectez-vous !</a>
             <input id="signUpButton" type="submit" value="S'inscrire" disabled>
         </form>
