--- a/src/main/resources/templates/passwordforgotten.html
+++ b/src/main/resources/templates/passwordforgotten.html
@@ -2,27 +2,25 @@
 <html lang="fr" xmlns:th="http://www.thymeleaf.org">
 <head>
     <!-- Required meta tags -->
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
     <!-- Bootstrap CSS -->
     <link
-            rel="stylesheet"
+            crossorigin="anonymous"
             href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
             integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
-            crossorigin="anonymous"
+            rel="stylesheet"
     />
     <title>Mot de passe oublié</title>
 </head>
 <body>
 <div>
-    <div id="forgotten-password">
-        <h1> Entrez votre adresse email </h1>
-        <form method="post" action="/passwordforgotten">
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" placeholder="Entrez votre adresse email">
-            <br/>
-            <input type="submit" value="Réinitialiser le mot de passe">
-        </form>
-    </div>
+    <h1> Entrez votre adresse email </h1>
+    <form action="/passwordforgotten" method="post">
+        <label for="email">Email</label>
+        <input id="email" name="email" placeholder="Entrez votre adresse email" type="email">
+        <br/>
+        <input type="submit" value="Réinitialiser le mot de passe">
+    </form>
 </div>
 </body>
 </html>
