--- a/src/main/resources/templates/addmembers.html
+++ b/src/main/resources/templates/addmembers.html
@@ -10,11 +10,20 @@
             integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
             rel="stylesheet"
     />
-    <title>Mot de passe oublié</title>
+    <!-- hCaptcha -->
+    <script async defer src="https://hcaptcha.com/1/api.js"></script>
+    <title>Ajout</title>
 </head>
 <body>
 <div>
-    <h1 th:text="'Un email de réinitialisation de mot de passe a été envoyé à ' + ${email} "></h1>
+    <h1>Ajout </h1>
     <p th:text="${error}"></p>
+    <form action="/addmembersconfirm" id="addMembersForm" method="post" enctype="multipart/form-data">
+        <input type="file" id="memberlist" name="memberlist"
+               accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel"
+               placeholder="Choisissez un fichier excel">
+        <input name='addButton' type='submit'/>
+    </form>
 </div>
 </body>
+</html>
