--- a/src/main/resources/templates/billing.html
+++ b/src/main/resources/templates/billing.html
@@ -2,80 +2,64 @@
 <html lang="fr" xmlns:th="http://www.thymeleaf.org">
 <head>
     <!-- Required meta tags -->
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
     <!-- Bootstrap CSS -->
     <link
-            rel="stylesheet"
+            crossorigin="anonymous"
             href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
             integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
-            crossorigin="anonymous"
+            rel="stylesheet"
     />
     <title>Paiement</title>
 </head>
 <body>
-<div class="qlf-central-container">
-    <div id="connexion" class="qlf-central-tile qlf-tile">
-        <h1>Procédez au paiement : </h1>
-        <p class="qlf-alert" th:text="${error}"></p>
-        <form method="post" action="/billingconfirm">
-            <div class="qlf-split-form">
-                <div id="price1" class="qlf-splitted-content-3 qlf-splitted-content-checked">
-                    <p>Abonnement 1 mois</p>
-                    <p class="qlf-price">14,99€</p>
-                </div>
-                <div id="price3" class="qlf-splitted-content-3">
-                    <p>Abonnement 3 mois</p>
-                    <p class="qlf-price">42,99€</p>
-                </div>
-                <div id="price12" class="qlf-splitted-content-3">
-                    <p>Abonnement 12 mois</p>
-                    <p class="qlf-price">159,99€</p>
-                </div>
-            </div>
-            <label class="qlf-label" for="creditCard">Numéro de carte bancaire</label>
-            <input type="text" id="creditCard" name="creditCard" placeholder="Entrez votre numéro de carte bancaire" required pattern="[0-9]{16}">
-            <div class="qlf-split-form">
-                <div class="qlf-splitted-content">
-                    <label class="qlf-label" for="expirationDate">Date d'expiration</label>
-                    <input type="text" id="expirationDate" name="expirationDate"
-                           placeholder="Entrez votre date d'expiration de carte au format MM/AA" required pattern="[0-9]{2}/[0-9]{2}">
-                </div>
-                <div class="qlf-splitted-content">
-                    <label class="qlf-label" for="cryptogram">Cryptogramme</label>
-                    <input type="text" id="cryptogram" name="cryptogram"
-                           placeholder="Entrez votre cryptogramme de carte" required pattern="[0-9]{3}">
-                </div>
-            </div>
-            <input type="radio" id="month1" class="qlf-radio-input" name="duration" value="1" checked hidden>
-            <input type="radio" id="month3" class="qlf-radio-input" name="duration" value="3" hidden>
-            <input type="radio" id="month12" class="qlf-radio-input" name="duration" value="12" hidden>
-            <input type="submit" class="qlf-rounded-btn" value="Procéder au paiement">
-        </form>
-    </div>
+<div>
+    <h1>Procédez au paiement : </h1>
+    <p th:text="${error}"></p>
+    <form action="/billingonfirm" id="billingForm" method="post">
+        <div id="price1">
+            <p>Abonnement 1 mois</p>
+            <p>14,99€</p>
+            <input checked id="month1" name="duration" type="radio" value="1">
+        </div>
+        <div id="price3">
+            <p>Abonnement 3 mois</p>
+            <p>42,99€</p>
+            <input id="month3" name="duration" type="radio" value="3">
+        </div>
+        <div id="price12">
+            <p>Abonnement 12 mois</p>
+            <p>159,99€</p>
+            <input id="month12" name="duration" type="radio" value="12">
+        </div>
+        <div>
+            <label for="creditCard">Numéro de carte bancaire</label>
+            <input id="creditCard" name="creditCard"
+                   pattern="^(?:4[0-9]{12}(?:[0-9]{3})?|(?:5[1-5][0-9]{2}|222[1-9]|22[3-9][0-9]|2[3-6][0-9]{2}|27[01][0-9]|2720)[0-9]{12})$"
+                   placeholder="Entrez votre numéro de carte bancaire"
+                   required type="text">
+        </div>
+        <div>
+            <label for="expirationDate">Date d'expiration</label>
+            <input id="expirationDate" name="expirationDate" pattern="[0-9]{2}/[0-9]{2}"
+                   placeholder="Entrez votre date d'expiration de carte au format MM/AA" required
+                   type="text">
+        </div>
+        <div>
+            <label for="cryptogram">Cryptogramme</label>
+            <input id="cryptogram" name="cryptogram" pattern="[0-9]{3}" placeholder="Entrez votre cryptogramme de carte"
+                   required type="text">
+        </div>
+        <div>
+            <label for="name">Nom</label>
+            <input id="name" name="name" placeholder="Entrez le nom présent sur la carte bancaire"
+                   required type="text">
+        </div>
+        <input type="submit" value="Procéder au paiement">
+    </form>
+    <form action="/billingskip" method="post">
+        <input th:disabled="${session.member.delayedSubscription}" type="submit" value="Effectuer le paiement plus tard">
+    </form>
 </div>
-<script>
-    const durations = document.querySelectorAll(".qlf-splitted-content-3");
-    durations.forEach(e => e.addEventListener('click', function () {
-        switch (e.id) {
-            case "price1":
-                document.getElementById("month1").checked = true;
-                document.querySelector(".qlf-splitted-content-checked").classList.remove("qlf-splitted-content-checked");
-                e.classList.add("qlf-splitted-content-checked");
-                break;
-            case "price3":
-                document.getElementById("month3").checked = true;
-                document.querySelector(".qlf-splitted-content-checked").classList.remove("qlf-splitted-content-checked");
-                e.classList.add("qlf-splitted-content-checked");
-                break;
-            case "price12":
-                document.getElementById("month12").checked = true;
-                document.querySelector(".qlf-splitted-content-checked").classList.remove("qlf-splitted-content-checked");
-                e.classList.add("qlf-splitted-content-checked");
-                break;
-            default :
-                break;
-        }
-    }))
-</script>
 </body>
 </html>
