--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 <div>
-    <h1>Connectez-vous : </h1>
+    <h1>Connexion</h1>
     <p th:text="${error}"></p>
     <form action="/loginconfirm" id="loginForm" method="post">
         <label for="email">Email</label>
