--- a/src/main/resources/templates/passwordforgotten.html
+++ b/src/main/resources/templates/passwordforgotten.html
@@ -14,7 +14,9 @@
 </head>
 <body>
 <div>
-    <h1> Entrez votre adresse email </h1>
+    <h1>Mot de passe oublié</h1>
+    <p th:text="${success}"></p>
+    <p th:text="${error}"></p>
     <form action="/passwordforgotten" method="post">
         <label for="email">Email</label>
         <input id="email" name="email" placeholder="Entrez votre adresse email" type="email">
