--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 <div>
-    <h1>Inscrivez-vous : </h1>
+    <h1>Inscription :</h1>
     <p th:text="${error}"></p>
     <form action="/signupconfirm" id="signupForm" method="post">
         <div>
