--- a/src/main/resources/templates/billing.html
+++ b/src/main/resources/templates/billing.html
@@ -14,9 +14,9 @@
 </head>
 <body>
 <div>
-    <h1>Procédez au paiement : </h1>
+    <h1>Paiement</h1>
     <p th:text="${error}"></p>
-    <form action="/billingonfirm" id="billingForm" method="post">
+    <form action="/billingconfirm" id="billingForm" method="post">
         <div id="price1">
             <p>Abonnement 1 mois</p>
             <p>14,99€</p>
