--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -13,6 +13,7 @@
     <title>Erreur</title>
 </head>
 <body>
+<div th:insert="fragments/navbar.html :: navbar"></div>
 <div>
     <div th:if="${#strings.equalsIgnoreCase(error, 'not found')== true or #strings.equalsIgnoreCase(error, 'internal server error')== true}">
         <h1 class="error">Une erreur est survenue !</h1>
