--- a/src/main/resources/templates/passwordforgotten.html
+++ b/src/main/resources/templates/passwordforgotten.html
@@ -13,11 +13,12 @@
     <title>Mot de passe oublié</title>
 </head>
 <body>
+<div th:insert="fragments/navbar.html :: navbar"></div>
 <div>
     <h1>Mot de passe oublié</h1>
     <p th:text="${success}"></p>
     <p th:text="${error}"></p>
-    <form action="/passwordforgotten" method="post">
+    <form action="/passwordforgotten" id="passwordForgotten" method="post">
         <label for="email">Email</label>
         <input id="email" name="email" placeholder="Entrez votre adresse email" type="email">
         <br/>
