--- a/src/main/resources/templates/managemembers.html
+++ b/src/main/resources/templates/managemembers.html
@@ -10,15 +10,15 @@
             integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
             rel="stylesheet"
     />
-    <title>Ajout</title>
+    <title>Gestion des membres</title>
 </head>
 <body>
 <div th:insert="fragments/navbar.html :: navbar"></div>
 <div>
-    <h1>Ajout</h1>
+    <h1>Gestion des membres</h1>
     <p th:text="${success}"></p>
     <p th:text="${error}"></p>
-    <form action="/addmemberconfirm" id="addMemberConfirm" method="post">
+    <form action="/addmembersconfirm" id="addMemberConfirm" method="post">
         <div>
             <label for="firstName">Prénom</label>
             <input id="firstName" name="firstName" pattern="^[a-zA-Z]+(?:[\s-][a-zA-Z]+)*$"
